--- a/vegan/index.html
+++ b/vegan/index.html
@@ -132,7 +132,7 @@
                 <p>Athlètes amateurs et professionnels&nbsp;:</p>
                 <p>Les athlètes ont besoin d'une alimentation spécialement conçue pour optimiser leurs performances dans le sport qu'ils pratiquent, à titre professionnel ou amateur.</p>
                 <p>De nombreux athlètes sont vegan. Dans le lien ci-dessous, nous voyons une liste de plus de 100 athlètes vegan de différents domaines sportifs, y compris le football, la musculation, le snowboard, etc.</p>
-                <p><a target="_blank" href="https://www.GreatVeganAthletes.com/all-athletes">⚽🏋🏂&nbsp;www.GreatVeganAthletes.com/all-athletes</a></p>
+                <p><a target="_blank" href="https://www.GreatVeganAthletes.com/all-athletes">⚽🏋🏂&nbsp;GreatVeganAthletes.com</a></p>
                 <p>Mais que nous dit la science sur les athlètes&nbsp;?</p>
                 <p>La vidéo ci-dessous, avec plus de 300 sources combinées, compare les performances sportives des personnes suivant un régime omnivore et de celles suivant un régime végétarien. La conclusion n'a montré aucune amélioration majeure de la performance à court terme, ce qui signifie que les deux groupes d'athlètes suivant des régimes bien planifiés ont obtenu des résultats similaires.</p>
             </div>
@@ -501,7 +501,7 @@
     <ul>
         <li class="i-s i-t bg-exe"><a>
             <div>
-                <p>Nous trouvons également quelques plans pour une diète vegan «&nbsp;prêts à l'emploi&nbsp;» ici&nbsp;: <a target="_blank" href="https://veganhealth.org/meal-plans">🥣🍓 veganhealth.org/meal-plans</a></p>
+                <p>Il y a aussi des plans pour une diète vegan «&nbsp;prêts à l'emploi&nbsp;» ici&nbsp;: <a target="_blank" href="https://veganhealth.org/meal-plans">🥣🍓 veganhealth.org</a></p>
             </div>
         </a></li>
     </ul>
@@ -545,7 +545,7 @@
                 <p>Bien-être animal&nbsp;:</p>
                 <p>À l'heure actuelle, nous tuons littéralement plus de 150 milliards d'animaux par an [7]. Pour mettre les choses en perspective&nbsp;: si nous tuions un humain pour chaque autre animal non humain que nous tuons, il ne resterait aucun (zéro) humains en moins de 19 jours.</p>
                 <p>«&nbsp;Une image vaut mieux que mille mots.&nbsp;»</p>
-                <p>Ce documentaire montre la réalité de l'industrie des aliments d'origine animale&nbsp;: <a target="_blank" href="https://watchdominion.com">🐂🦊🐇 WatchDominion.com</a></p>
+                <p>Ce documentaire montre la réalité de l'industrie d'exploitation animale&nbsp;: <a target="_blank" href="https://watchdominion.com">🐂🦊🐇 WatchDominion.com</a></p>
                 <p>Bien que son contenu soit difficile à regarder pour certaines personnes, les procédures, les ustensiles et les machines indiqués sont parfaitement légaux et conformes aux normes de l'industrie.</p>
                 <p>Un documentaire probablement «&nbsp;plus facile à digérer&nbsp;» est&nbsp;: <a target="_blank" href="https://hope-theproject.com/the-film/the-film">🕊️🐈🐯 Hope-TheProject.com</a></p>
                 <p>Earthlings est un autre film qui parle d'éthique et de spécisme dans la manière dont nous traitons la plupart des animaux. Une «&nbsp;édition anniversaire&nbsp;» gratuite est disponible ici&nbsp;: <a target="_blank" href="https://nationearth.com">🌐🐶🐡 NationEarth.com</a></p>
@@ -575,7 +575,7 @@
             <div>
                 <p>[1] “Position of the Academy of Nutrition and Dietetics: Vegetarian Diets”, https://doi.org/10.1016/j.jand.2016.09.025</p>
                 <p>[2] independent.co.uk/life-style/health-and-families/veganism-environmental-impact-planet-reduced-plant-based-diet-humans-study-a8378631.html</p>
-                <p>[3] theguardian.com/environment/2018/may/ 31/avoiding-meat-and-dairy-is-single-biggest-way-to-reduce-your-impact-on-earth</p>
+                <p>[3] theguardian.com/environment/2018 /may/31/avoiding-meat-and-dairy-is-single-biggest-way-to-reduce-your-impact-on-earth</p>
                 <p>[4] bbcgoodfood.com/howto/guide/vegan-diet-better-environment</p>
                 <p>[5] cowspiracy.com/facts</p>
                 <p>[6] bbcgoodfood.com/howto/guide/what-would-world-look-if-everyone-went-vegan</p>
