--- a/exercise/index.html
+++ b/exercise/index.html
@@ -74,7 +74,7 @@
         <li class="i-s">
             <a class="js-scroll-trigger" href="#interview">
                 <div class='logo'><i class='fas fa-user-friends fa-2x'></i></div>
-                <p class='title'>Entretien avec coach</p>
+                <p class='title'>Un entretien avec coach</p>
             </a>
         </li>
         <li class="i-s">
@@ -106,8 +106,8 @@
                 <span class="rightfloat" style="background-image: url('../img/planner.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
                     <h2>Plan complet d'exercices</h2>
-                    <p>• Document PDF complet avec vos exercices personnalisés, nombre de séries, répétitions, temps de repos, et conseils d'exécution</p>
-                    <p>• Ressources explicatives (articles, vidéos...) pour une exécution correcte</p>
+                    <p>• Document PDF complet avec vos exercices personnalisés</p>
+                    <p>• Liste d'exercices avec conseils d'exécution, nombre de séries, répétitions, et temps de repos</p>
                 </div>
             </a>
         </li>
@@ -125,7 +125,7 @@
             <a>
                 <span class="rightfloat" style="background-image: url('../img/call.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
-                    <h2>Entretien avec coach</h2>
+                    <h2>Un entretien avec coach</h2>
                     <p>• Étude des mesures corporelles</p>
                     <p>• Définition des objectifs à court et long termes</p>
                     <p>• Discussion sur la disponibilité temporelle et des équipements</p>
@@ -136,7 +136,7 @@
             <a>
                 <span class="rightfloat" style="background-image: url('../img/chat.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
-                    <h2>Suivi whatsapp</h2>
+                    <h2>Suivi en ligne</h2>
                     <p>• Adaptations mineures du programme d'entraînement</p>
                     <p>• Réponse aux questions sous 48h</p>
                     <p>• Partage de conseils et promotions</p>
