--- a/exercise/index.html
+++ b/exercise/index.html
@@ -80,7 +80,7 @@
         <li class="i-s">
             <a class="js-scroll-trigger" href="#chat">
                 <div class='logo'><i class='fab fa-whatsapp fa-2x'></i></div>
-                <p class='title'>Suivi whatsapp</p>
+                <p class='title'>Suivi en ligne</p>
             </a>
         </li>
     </ul>
