--- a/exercise-list/index.html
+++ b/exercise-list/index.html
@@ -55,48 +55,109 @@
         Liste d'exercices et conseils d'exécution
     </h3>
 
+    <div style="position: fixed; bottom: 0px; width: 100%; height: 30px; padding-top: 5px; background: #000000B0; vertical-align: middle;">
+        <center>
+            <input style="height: 25px; vertical-align: middle; width: 50%; max-width: 300px; background: #a64c14c0; border: 0; color: white; font-size: 17px; text-align: center;" id="search"></input>&nbsp;&nbsp;&nbsp;<button onclick="window.find(document.getElementById('search').value, false, false, true, false, false, true);" style="background: none; color: inherit; border: none ; padding: 0; font: inherit; cursor: pointer; outline: inherit;"><i class="fas fa-search"></i></button>
+        </center>
+    </div>
+
     <ul>
-        <li class="i-b" style="background: linear-gradient(to right, #A34508, #85953D);">
+        <li class="i-v bg-ig-exe">
             <a>
                 <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/119574607_325609462088078_44235312807904820_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=F0kkRyMshEMAX8OyI3A&oh=cdb2e478b1a013a3fff3276c7e791e50&oe=5F63FE94'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
                     <h2>Écarté à la poulie haute (buste à 45°)</h2>
-                    <p>Clique ici pour voir le post complet, avec les conseils d'exécution, muscles sollicités, etc.</p>
-                    <br>
                 </div>
             </a>
         </li>
-        <li class="i-b" style="background: linear-gradient(to right, #A34508, #85953D);">
+        <li class="i-v bg-ig-exe">
             <a>
                 <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/118726194_597524604201138_5818458794211415501_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eMkSjuwktEYAX_WKbrj&oh=ccf699de4b6ad867b90a78b74ccb2b21&oe=5F63D5F3'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
                     <h2>Élévation latérale</h2>
-                    <p>Clique ici pour voir le post complet, avec les conseils d'exécution, muscles sollicités, etc.</p>
-                    <br>
                 </div>
             </a>
         </li>
-        <li class="i-b" style="background: linear-gradient(to right, #A34508, #85953D);">
+        <li class="i-v bg-ig-exe">
             <a>
                 <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/117163140_2380319235594987_3169963532318788925_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=shDxUyeUmrUAX89d91-&oh=e55c2c2ea52459ba8b77e99d3810b401&oe=5F643C7F'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
                     <h2>Oiseau poulie haute</h2>
-                    <p>Clique ici pour voir le post complet, avec les conseils d'exécution, muscles sollicités, etc.</p>
-                    <br>
                 </div>
             </a>
         </li>
-        <li class="i-b" style="background: linear-gradient(to right, #A34508, #85953D);">
+        <li class="i-v bg-ig-exe">
             <a>
                 <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/109279013_275978893735320_1796073642691422585_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=100&_nc_ohc=tqULYEgJZZAAX_nD2wn&oh=bf6d0ff2447adecbb5dd6d2af1cb1831&oe=5F64793A'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
                     <h2>Biceps Curl Marteau</h2>
-                    <p>Clique ici pour voir le post complet, avec les conseils d'exécution, muscles sollicités, etc.</p>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/107445298_280026606416571_5967170952524920713_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=JKWPZqABsBcAX8dVpsV&oh=d323339b97b59dfa8348c9cc325508e4&oe=5F66C33C'); background-size: cover; background-position: center;"></span>
+                <div>
                     <br>
+                    <h2>A</h2>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/c0.0.1080.1080a/s640x640/106389086_304658690670087_6799373245249834553_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=oD2mQMGcH6MAX-fa16x&oh=da11a3a14be9efc82743ba4999269584&oe=5F671F3B'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <br>
+                    <h2>A</h2>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/105041257_575131429812720_1658355155153775596_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=100&_nc_ohc=W9yMtUtISD0AX9FLRs4&oh=acb5d210992503b970a38e707a5ac72c&oe=5F667E9F'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <br>
+                    <h2>A</h2>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/103928430_187020179381411_4064324099342231030_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=B7VuwmHFsm4AX8RaqSr&oh=a38785ec19165bcbbb34de707cb1279e&oe=5F669978'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <br>
+                    <h2>A</h2>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/e15/s640x640/103817621_176618917162512_4318858203633158262_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=100&_nc_ohc=nVCYPGZ40GwAX93gpCM&_nc_tp=15&oh=6ee03a49107fdd795bf07c7dd176555c&oe=5F670237'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <br>
+                    <h2>A</h2>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/e15/c0.9.720.720a/s640x640/103510098_566082814094955_8000320880405671875_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=JDtCgGR2Iq4AX9HEkVt&_nc_tp=16&oh=b13bd131f62ac09331d271feb8400aaa&oe=5F670ED3'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <br>
+                    <h2>A</h2>
+                </div>
+            </a>
+        </li>
+        <li class="i-v bg-ig-exe">
+            <a>
+                <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/101197893_340185320282611_5062930445386125225_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=LFacJl3wSi8AX8Npact&oh=1a38140821d6c779c12ae6cef83fd1cd&oe=5F66A51B'); background-size: cover; background-position: center;"></span>
+                <div>
+                    <br>
+                    <h2>A</h2>
                 </div>
             </a>
         </li>
