--- a/exercise-list/index.html
+++ b/exercise-list/index.html
@@ -113,7 +113,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/107445298_280026606416571_5967170952524920713_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=JKWPZqABsBcAX8dVpsV&oh=d323339b97b59dfa8348c9cc325508e4&oe=5F66C33C'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Rowing Barre</h2>
                 </div>
             </a>
         </li>
@@ -122,7 +122,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/c0.0.1080.1080a/s640x640/106389086_304658690670087_6799373245249834553_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=oD2mQMGcH6MAX-fa16x&oh=da11a3a14be9efc82743ba4999269584&oe=5F671F3B'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Biceps Curl</h2>
                 </div>
             </a>
         </li>
@@ -131,7 +131,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/105041257_575131429812720_1658355155153775596_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=100&_nc_ohc=W9yMtUtISD0AX9FLRs4&oh=acb5d210992503b970a38e707a5ac72c&oe=5F667E9F'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Soulevé de Terre Jambes Tendues</h2>
                 </div>
             </a>
         </li>
@@ -140,7 +140,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/103928430_187020179381411_4064324099342231030_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=B7VuwmHFsm4AX8RaqSr&oh=a38785ec19165bcbbb34de707cb1279e&oe=5F669978'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Squat</h2>
                 </div>
             </a>
         </li>
@@ -149,7 +149,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/e15/s640x640/103817621_176618917162512_4318858203633158262_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=100&_nc_ohc=nVCYPGZ40GwAX93gpCM&_nc_tp=15&oh=6ee03a49107fdd795bf07c7dd176555c&oe=5F670237'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Dips</h2>
                 </div>
             </a>
         </li>
@@ -158,7 +158,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdt1-1.cdninstagram.com/v/t51.2885-15/e15/c0.9.720.720a/s640x640/103510098_566082814094955_8000320880405671875_n.jpg?_nc_ht=scontent-cdt1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=JDtCgGR2Iq4AX9HEkVt&_nc_tp=16&oh=b13bd131f62ac09331d271feb8400aaa&oe=5F670ED3'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Tractions</h2>
                 </div>
             </a>
         </li>
@@ -167,7 +167,7 @@
                 <span class="rightfloat" style="background-image: url('https://scontent-cdg2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/101197893_340185320282611_5062930445386125225_n.jpg?_nc_ht=scontent-cdg2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=LFacJl3wSi8AX8Npact&oh=1a38140821d6c779c12ae6cef83fd1cd&oe=5F66A51B'); background-size: cover; background-position: center;"></span>
                 <div>
                     <br>
-                    <h2>A</h2>
+                    <h2>Oiseau</h2>
                 </div>
             </a>
         </li>
