--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
         version          : 'v8.0'
       });
     };
+
     (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
   <!-- Your Chat Plugin code -->
   <div class="fb-customerchat"
     attribution=setup_tool
     page_id="107727547626874"
     theme_color="#6699cc"
-    logged_in_greeting="Bonjour ! Tu peux tout demander, nous répondrons :)"
-    logged_out_greeting="Bonjour ! Tu peux tout demander, nous répondrons :)">
+    logged_in_greeting="Bonjour ! Tu peux tout demander, nous y répondrons ici ! Ou contact@be100you.com"
+    logged_out_greeting="Bonjour ! Tu peux tout demander, nous y répondrons ici ! Ou contact@be100you.com">
   </div>
   
   <!-- Navigation -->
