--- a/exercise/index.html
+++ b/exercise/index.html
@@ -173,7 +173,8 @@
             <br>
             <ul>
                 <li class="i-s" style="background: green; box-shadow: 0px 0px 10px #1eff00; width: 200px;">
-                    <a class="js-scroll-trigger" id="checkout-button-price_1HDXdyCdJrGKJNulfsh3hgZX" role="link" style="cursor: pointer;">
+                    <!--<a class="js-scroll-trigger" id="checkout-button-price_1HDXdyCdJrGKJNulfsh3hgZX" role="link" style="cursor: pointer;">-->
+                    <a class="js-scroll-trigger" href="#" style="cursor: pointer;">
                         <div class='logo'><i class='fas fa-euro-sign fa-2x'></i></div>
                         <p class='title'>1 x 68€<br><br>Achetez un programme d'entraînement</p>
                     </a>
@@ -182,7 +183,8 @@
             <br>
             <ul>
                 <li class="i-s" style="background: #004396; box-shadow: 0px 0px 10px #177fff; width: 200px;">
-                    <a class="js-scroll-trigger" id="checkout-button-price_1HDXddCdJrGKJNulftynT1dc" role="link" style="cursor: pointer;">
+                    <!--<a class="js-scroll-trigger" id="checkout-button-price_1HDXddCdJrGKJNulftynT1dc" role="link" style="cursor: pointer;">-->
+                    <a class="js-scroll-trigger" href="#" style="cursor: pointer;">
                         <div class='logo'><i class='fas fa-sync fa-2x'></i></div>
                         <p class='title'>Abonnement à<br>prix réduit : 59€<br>par programme<br><br>Recevez un nouveau programme toutes les 8 semaines</p>
                     </a>
