--- a/exercise/index.html
+++ b/exercise/index.html
@@ -74,7 +74,7 @@
         <li class="i-s">
             <a class="js-scroll-trigger" href="#interview">
                 <div class='logo'><i class='fas fa-user-friends fa-2x'></i></div>
-                <p class='title'>Un entretien avec coach</p>
+                <p class='title'>Un entretien en visio</p>
             </a>
         </li>
         <li class="i-s">
@@ -125,7 +125,7 @@
             <a>
                 <span class="rightfloat" style="background-image: url('../img/call.jpg'); background-size: cover; background-position: center;"></span>
                 <div>
-                    <h2>Un entretien avec coach</h2>
+                    <h2>Un entretien en visio</h2>
                     <p>• Étude des mesures corporelles</p>
                     <p>• Définition des objectifs à court et long termes</p>
                     <p>• Discussion sur la disponibilité temporelle et des équipements</p>
