--- a/exercise/index.html
+++ b/exercise/index.html
@@ -184,7 +184,7 @@
             <!--<ul>
                 <li class="i-s" style="background: #004396; box-shadow: 0px 0px 10px #177fff; width: 200px;">
                     <!--<a class="js-scroll-trigger" id="checkout-button-price_1HDXddCdJrGKJNulftynT1dc" role="link" style="cursor: pointer;">-->
-                    <a class="js-scroll-trigger" href="#" style="cursor: pointer;">
+                    <!--<a class="js-scroll-trigger" href="#" style="cursor: pointer;">
                         <div class='logo'><i class='fas fa-sync fa-2x'></i></div>
                         <p class='title'>Abonnement à<br>prix réduit : 70€<br>par programme<br><br>Recevez un nouveau programme toutes les 8 semaines</p>
                     </a>
