--- a/exercise/index.html
+++ b/exercise/index.html
@@ -88,7 +88,7 @@
     <br>
     <ul>
         <li class="i-s shake" style="background: green; box-shadow: 0px 0px 10px #1eff00; width: 160px;">
-            <a class="js-scroll-trigger" id="myBtn" style="cursor: pointer;">
+            <a href="../index.html#buy" class="js-scroll-trigger" style="cursor: pointer;"><!-- id="myBtn" -->
                 <div class='logo'><i class='fas fa-euro-sign fa-2x'></i></div>
                 <p class='title'>ACHETER</p>
             </a>
@@ -148,7 +148,7 @@
     <br>
     <ul>
         <li class="i-s shake" style="background: green; box-shadow: 0px 0px 10px #1eff00; width: 160px;">
-            <a class="js-scroll-trigger" id="myBtn2" style="cursor: pointer;">
+            <a href="../index.html#buy" class="js-scroll-trigger" style="cursor: pointer;"><!-- id="myBtn2" -->
                 <div class='logo'><i class='fas fa-euro-sign fa-2x'></i></div>
                 <p class='title'>ACHETER</p>
             </a>
