--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     logged_in_greeting="Bonjour ! Tu peux tout demander, nous y répondrons ici ! Ou contact@be100you.com"
     logged_out_greeting="Bonjour ! Tu peux tout demander, nous y répondrons ici ! Ou contact@be100you.com">
   </div>
-  
+
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
@@ -85,6 +85,9 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#triangle"><i class="fas fa-mountain fa-2x"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#buy"><i class="fas fa-hand-holding-usd fa-2x"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><i class="fas fa-user-friends fa-2x"></i></a>
@@ -573,8 +576,108 @@
     </div>
   </section>
 
+  <!-- Buy Section -->
+  <section id="buy" class="contact-section buy-bg bg-black">
+    <div class="container">
+
+      <div class="row align-items-center no-gutters mb-3 mt-0">
+          <div id="rest" class="col-12 bg-transparent">
+            <div class="featured-text text-center">
+            <h5 class="text-white mb-2">
+              <span lang="en">Our prices</span>
+              <span lang="fr">Nos tarifs</span>
+              <span lang="pt">Nossas tarifas</span>
+            </h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+
+          <div class="col-md-4 mb-9 mb-md-0">
+            <a href="#buy">
+              <div class="card py-4">
+                <div class="card-body text-center">
+                  <i class="fas fa-dumbbell fa-3x"></i>
+                  <br/><br/>
+                  <div class="text-white">Sans engagement</div>
+                  <br/>
+                  <h5 class="text-white m-0">
+                      90€
+                      <br/><br/>
+                      1 programme<br/>personnalisé
+                      <br/><br/>
+                      1 mois de suivi
+                  </h5>
+                </div>
+              </div>
+            </a>
+          </div>
+
+        <div class="col-md-4 mb-9 mb-md-0">
+          <a href="#buy">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fas fa-bolt fa-6x"></i>
+                <br/><br/>
+                <div class="text-white">4 mois</div>
+                <br/>
+                <h5 class="text-white m-0">
+                    80€/mois
+                    <br/><br/>
+                    programme personnalisé<br/>tous les 2 mois
+                    <br/><br/>
+                    suivi hebdomadaire
+                </h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-md-4 mb-9 mb-md-0">
+          <a href="#buy">
+            <div class="card py-4">
+              <div class="card-body text-center">
+                <i class="fas fa-rocket fa-3x"></i>
+                <br/><br/>
+                <div class="text-white">12 mois</div>
+                <br/>
+                <h5 class="text-white m-0">
+                    75€/mois
+                    <br/><br/>
+                    programme personnalisé<br/>tous les 2 mois
+                    <br/><br/>
+                    suivi hebdomadaire
+                </h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+      </div>
+
+      <div class="row align-items-center no-gutters mb-3 mt-4">
+        <div class="col-12 bg-transparent">
+          <div class="featured-text text-center">
+            <h5 class="text-white mb-2">
+              <a href="exercise" class="js-scroll-trigger exercise">
+                <button type="button" class="btn btn-primary btn-exercise">
+                  <i class="fas fa-plus fa-lg"></i>
+                  <span lang="en"> More details</span>
+                  <span lang="fr"> Plus de détails</span>
+                  <span lang="pt"> Mais detalhes</span>
+                </button>
+              </a>
+            </h5>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black">
+  <section id="contact" class="contact-section contact-bg bg-black">
     <div class="container">
 
       <div class="row align-items-center no-gutters mb-3 mt-0">
