--- a/index.html
+++ b/index.html
@@ -597,18 +597,26 @@
           <div class="col-md-4 mb-9 mb-md-0">
             <a href="#buy">
               <div class="card py-4">
-                <div class="card-body text-center">
+                <div class="card-body text-center" style="line-height: 1.2">
                   <i class="fas fa-dumbbell fa-3x"></i>
-                  <br/><br/>
+                  <br><br>
                   <div class="text-white">Sans engagement</div>
-                  <br/>
+                  <br>
                   <h5 class="text-white m-0">
                       90€
-                      <br/><br/>
+                      <br><br>
                       1 programme<br/>personnalisé
-                      <br/><br/>
+                      <br><br>
                       1 mois de suivi
                   </h5>
+                  <br>
+                  <button type="button" class="btn btn-primary btn-exercise">
+                      <span lang="en"> Buy</span>
+                      <span lang="fr"> Acheter</span>
+                      <span lang="pt"> Comprar</span>
+                  </button>
+                  <br>
+                  <span style="font-size: 12px;">*payement unique de 90€</span>
                 </div>
               </div>
             </a>
@@ -617,18 +625,26 @@
         <div class="col-md-4 mb-9 mb-md-0">
           <a href="#buy">
             <div class="card py-4 h-100">
-              <div class="card-body text-center">
+              <div class="card-body text-center" style="line-height: 1.2">
                 <i class="fas fa-bolt fa-6x"></i>
-                <br/><br/>
+                <br><br>
                 <div class="text-white">4 mois</div>
-                <br/>
+                <br>
                 <h5 class="text-white m-0">
                     80€/mois
-                    <br/><br/>
+                    <br><br>
                     programme personnalisé<br/>tous les 2 mois
-                    <br/><br/>
+                    <br><br>
                     suivi hebdomadaire
                 </h5>
+                <br>
+                <button type="button" class="btn btn-primary btn-exercise">
+                    <span lang="en"> Buy</span>
+                    <span lang="fr"> Acheter</span>
+                    <span lang="pt"> Comprar</span>
+                </button>
+                <br>
+                <span style="font-size: 12px;">*payement de 2 mois anticipés (160€), puis 2x de 80€/mois</span>
               </div>
             </div>
           </a>
@@ -637,18 +653,26 @@
         <div class="col-md-4 mb-9 mb-md-0">
           <a href="#buy">
             <div class="card py-4">
-              <div class="card-body text-center">
+              <div class="card-body text-center" style="line-height: 1.2">
                 <i class="fas fa-rocket fa-3x"></i>
-                <br/><br/>
+                <br><br>
                 <div class="text-white">12 mois</div>
-                <br/>
+                <br>
                 <h5 class="text-white m-0">
                     75€/mois
-                    <br/><br/>
+                    <br><br>
                     programme personnalisé<br/>tous les 2 mois
-                    <br/><br/>
+                    <br><br>
                     suivi hebdomadaire
                 </h5>
+                <br>
+                <button type="button" class="btn btn-primary btn-exercise">
+                    <span lang="en"> Buy</span>
+                    <span lang="fr"> Acheter</span>
+                    <span lang="pt"> Comprar</span>
+                </button>
+                <br>
+                <span style="font-size: 12px;">*payement de 2 mois anticipés (150€), puis 10x de 75€/mois</span>
               </div>
             </div>
           </a>
